stable marriage/simmetric best match; working on wikitables from TURL and SLOTH

--- a/src/notebooks/fasttext/presidents_forests_parks.ipynb
+++ b/src/notebooks/fasttext/presidents_forests_parks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,6 +215,239 @@
    ],
    "source": [
     "presidents_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NameA</th>\n",
+       "      <th>LocationB</th>\n",
+       "      <th>Date formedC</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>DescriptionD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Allegheny</td>\n",
+       "      <td>Pennsylvania\\n41°39′N 79°01′W﻿ / ﻿41.650°N 79....</td>\n",
+       "      <td>September 24, 1923</td>\n",
+       "      <td>513,655 acres (2,078.7 km2)</td>\n",
+       "      <td>Pennsylvania's only national forest includes K...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Angeles</td>\n",
+       "      <td>California\\n34°24′N 118°10′W﻿ / ﻿34.400°N 118....</td>\n",
+       "      <td>December 20, 1892</td>\n",
+       "      <td>661,565 acres (2,677.3 km2)</td>\n",
+       "      <td>Located in the San Gabriel Mountains at the ed...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Angelina</td>\n",
+       "      <td>Texas\\n31°13′N 94°17′W﻿ / ﻿31.217°N 94.283°W﻿ ...</td>\n",
+       "      <td>October 13, 1936</td>\n",
+       "      <td>154,140 acres (623.8 km2)</td>\n",
+       "      <td>Primarily longleaf, loblolly, and shortleaf pi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apache–Sitgreaves</td>\n",
+       "      <td>Arizona, New Mexico\\n33°44′N 109°05′W﻿ / ﻿33.7...</td>\n",
+       "      <td>August 17, 1898</td>\n",
+       "      <td>2,626,306 acres (10,628.3 km2)</td>\n",
+       "      <td>Encompassing the Mogollon Rim and White Mounta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Apalachicola</td>\n",
+       "      <td>Florida\\n30°11′N 84°41′W﻿ / ﻿30.183°N 84.683°W...</td>\n",
+       "      <td>May 13, 1936</td>\n",
+       "      <td>576,119 acres (2,331.5 km2)</td>\n",
+       "      <td>As the largest national forest in Florida, Apa...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               NameA                                          LocationB  \\\n",
+       "0          Allegheny  Pennsylvania\\n41°39′N 79°01′W﻿ / ﻿41.650°N 79....   \n",
+       "1            Angeles  California\\n34°24′N 118°10′W﻿ / ﻿34.400°N 118....   \n",
+       "2           Angelina  Texas\\n31°13′N 94°17′W﻿ / ﻿31.217°N 94.283°W﻿ ...   \n",
+       "3  Apache–Sitgreaves  Arizona, New Mexico\\n33°44′N 109°05′W﻿ / ﻿33.7...   \n",
+       "4       Apalachicola  Florida\\n30°11′N 84°41′W﻿ / ﻿30.183°N 84.683°W...   \n",
+       "\n",
+       "         Date formedC                            Area  \\\n",
+       "0  September 24, 1923     513,655 acres (2,078.7 km2)   \n",
+       "1   December 20, 1892     661,565 acres (2,677.3 km2)   \n",
+       "2    October 13, 1936       154,140 acres (623.8 km2)   \n",
+       "3     August 17, 1898  2,626,306 acres (10,628.3 km2)   \n",
+       "4        May 13, 1936     576,119 acres (2,331.5 km2)   \n",
+       "\n",
+       "                                        DescriptionD  \n",
+       "0  Pennsylvania's only national forest includes K...  \n",
+       "1  Located in the San Gabriel Mountains at the ed...  \n",
+       "2  Primarily longleaf, loblolly, and shortleaf pi...  \n",
+       "3  Encompassing the Mogollon Rim and White Mounta...  \n",
+       "4  As the largest national forest in Florida, Apa...  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forests_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Date established as park</th>\n",
+       "      <th>Area (2023)</th>\n",
+       "      <th>Recreation visitors (2022)</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Acadia</td>\n",
+       "      <td>Maine\\n44°21′N 68°13′W﻿ / ﻿44.35°N 68.21°W﻿ / ...</td>\n",
+       "      <td>February 26, 1919</td>\n",
+       "      <td>49,071.40 acres (198.6 km2)</td>\n",
+       "      <td>3,970,260</td>\n",
+       "      <td>Covering most of Mount Desert Island and other...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>American Samoa\\n14°15′S 170°41′W﻿ / ﻿14.25°S 1...</td>\n",
+       "      <td>October 31, 1988</td>\n",
+       "      <td>8,256.67 acres (33.4 km2)</td>\n",
+       "      <td>12,135</td>\n",
+       "      <td>The southernmost national park is on three Sam...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arches</td>\n",
+       "      <td>Utah\\n38°41′N 109°34′W﻿ / ﻿38.68°N 109.57°W﻿ /...</td>\n",
+       "      <td>November 12, 1971</td>\n",
+       "      <td>76,678.98 acres (310.3 km2)</td>\n",
+       "      <td>1,460,652</td>\n",
+       "      <td>This site features more than 2,000 natural san...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Badlands</td>\n",
+       "      <td>South Dakota\\n43°45′N 102°30′W﻿ / ﻿43.75°N 102...</td>\n",
+       "      <td>November 10, 1978</td>\n",
+       "      <td>242,755.94 acres (982.4 km2)</td>\n",
+       "      <td>1,006,809</td>\n",
+       "      <td>The Badlands are a collection of buttes, pinna...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Big Bend †</td>\n",
+       "      <td>Texas\\n29°15′N 103°15′W﻿ / ﻿29.25°N 103.25°W﻿ ...</td>\n",
+       "      <td>June 12, 1944</td>\n",
+       "      <td>801,163.21 acres (3,242.2 km2)</td>\n",
+       "      <td>514,107</td>\n",
+       "      <td>Named for the prominent bend in the Rio Grande...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Name                                           Location  \\\n",
+       "0          Acadia  Maine\\n44°21′N 68°13′W﻿ / ﻿44.35°N 68.21°W﻿ / ...   \n",
+       "1  American Samoa  American Samoa\\n14°15′S 170°41′W﻿ / ﻿14.25°S 1...   \n",
+       "2          Arches  Utah\\n38°41′N 109°34′W﻿ / ﻿38.68°N 109.57°W﻿ /...   \n",
+       "3        Badlands  South Dakota\\n43°45′N 102°30′W﻿ / ﻿43.75°N 102...   \n",
+       "4      Big Bend †  Texas\\n29°15′N 103°15′W﻿ / ﻿29.25°N 103.25°W﻿ ...   \n",
+       "\n",
+       "  Date established as park                     Area (2023)  \\\n",
+       "0        February 26, 1919     49,071.40 acres (198.6 km2)   \n",
+       "1         October 31, 1988       8,256.67 acres (33.4 km2)   \n",
+       "2        November 12, 1971     76,678.98 acres (310.3 km2)   \n",
+       "3        November 10, 1978    242,755.94 acres (982.4 km2)   \n",
+       "4            June 12, 1944  801,163.21 acres (3,242.2 km2)   \n",
+       "\n",
+       "  Recreation visitors (2022)  \\\n",
+       "0                  3,970,260   \n",
+       "1                     12,135   \n",
+       "2                  1,460,652   \n",
+       "3                  1,006,809   \n",
+       "4                    514,107   \n",
+       "\n",
+       "                                         Description  \n",
+       "0  Covering most of Mount Desert Island and other...  \n",
+       "1  The southernmost national park is on three Sam...  \n",
+       "2  This site features more than 2,000 natural san...  \n",
+       "3  The Badlands are a collection of buttes, pinna...  \n",
+       "4  Named for the prominent bend in the Rio Grande...  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parks_df.head()"
    ]
   },
   {
