working on chroma vdb

--- a/src/notebooks/fasttext/working_on_wikitables.ipynb
+++ b/src/notebooks/fasttext/working_on_wikitables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "[1000 rows x 5 columns]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,25 +361,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('1980 Intertoto Cup', '1994–95 UEFA Champions League group stage')"
+       "('SNF8', 'SPNS2')"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "idx = 103\n",
+    "idx = 2\n",
     "r_id, s_id = sloth_tested_pairs.loc[idx, ['r_id', 's_id']]\n",
     "r_table, s_table = rebuild_table(r_id), rebuild_table(s_id)\n",
     "wikitables[r_id]['pgTitle'], wikitables[s_id]['pgTitle']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': '15182906-1',\n",
+       " 'pgTitle': 'SNF8',\n",
+       " 'sectionTitle': 'Model organisms',\n",
+       " 'tableCaption': 'Snf8 knockout mouse phenotype',\n",
+       " 'pgId': 15182906,\n",
+       " 'tableId': 1,\n",
+       " 'tableData': [[{'text': 'Homozygote viability',\n",
+       "    'surfaceLinks': [{'surface': 'Homozygote',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 23661260, 'language': 'en', 'title': 'Homozygote'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Abnormal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Recessive lethal study',\n",
+       "    'surfaceLinks': [{'surface': 'Recessive',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 370581, 'language': 'en', 'title': 'Recessive'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Abnormal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Fertility', 'surfaceLinks': []},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Body weight', 'surfaceLinks': []},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Anxiety',\n",
+       "    'surfaceLinks': [{'surface': 'Anxiety',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 31532584,\n",
+       "       'language': 'en',\n",
+       "       'title': 'Open_Field_(animal_test)'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Neurological assessment', 'surfaceLinks': []},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Grip strength', 'surfaceLinks': []},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Hot plate',\n",
+       "    'surfaceLinks': [{'surface': 'Hot plate',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 29383179, 'language': 'en', 'title': 'Hot_plate_test'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Dysmorphology',\n",
+       "    'surfaceLinks': [{'surface': 'Dysmorphology',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 223011, 'language': 'en', 'title': 'Dysmorphology'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Indirect calorimetry',\n",
+       "    'surfaceLinks': [{'surface': 'Indirect calorimetry',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 7522,\n",
+       "       'language': 'en',\n",
+       "       'title': 'Indirect_calorimetry'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Glucose tolerance test',\n",
+       "    'surfaceLinks': [{'surface': 'Glucose tolerance test',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 60635,\n",
+       "       'language': 'en',\n",
+       "       'title': 'Glucose_tolerance_test'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Auditory brainstem response',\n",
+       "    'surfaceLinks': [{'surface': 'Auditory brainstem response',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 6259764,\n",
+       "       'language': 'en',\n",
+       "       'title': 'Auditory_brainstem_response'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'DEXA',\n",
+       "    'surfaceLinks': [{'surface': 'DEXA',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 377691,\n",
+       "       'language': 'en',\n",
+       "       'title': 'Dual-energy_X-ray_absorptiometry'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Radiography',\n",
+       "    'surfaceLinks': [{'surface': 'Radiography',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 95807, 'language': 'en', 'title': 'Radiography'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Body temperature', 'surfaceLinks': []},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Eye morphology', 'surfaceLinks': []},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Clinical chemistry',\n",
+       "    'surfaceLinks': [{'surface': 'Clinical chemistry',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 65622, 'language': 'en', 'title': 'Clinical_chemistry'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Plasma s immunoglobulin',\n",
+       "    'surfaceLinks': [{'surface': 'Plasma',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 212240, 'language': 'en', 'title': 'Blood_plasma'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Haematology',\n",
+       "    'surfaceLinks': [{'surface': 'Haematology',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 63564, 'language': 'en', 'title': 'Haematology'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 's Peripheral blood lymphocyte',\n",
+       "    'surfaceLinks': [{'surface': 'Peripheral blood lymphocyte',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 5584189,\n",
+       "       'language': 'en',\n",
+       "       'title': 'Peripheral_blood_lymphocyte'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Micronucleus test',\n",
+       "    'surfaceLinks': [{'surface': 'Micronucleus test',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 9022998,\n",
+       "       'language': 'en',\n",
+       "       'title': 'Micronucleus_test'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Heart weight', 'surfaceLinks': []},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Brain histopathology', 'surfaceLinks': []},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Salmonella infection',\n",
+       "    'surfaceLinks': [{'surface': 'Salmonella',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 42114, 'language': 'en', 'title': 'Salmonella'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'Citrobacter infection',\n",
+       "    'surfaceLinks': [{'surface': 'Citrobacter',\n",
+       "      'locType': 'MAIN_TABLE',\n",
+       "      'target': {'id': 4393179, 'language': 'en', 'title': 'Citrobacter'},\n",
+       "      'linkType': 'INTERNAL'}]},\n",
+       "   {'text': 'Normal', 'surfaceLinks': []}],\n",
+       "  [{'text': 'All tests and analysis from', 'surfaceLinks': []},\n",
+       "   {'text': 'All tests and analysis from', 'surfaceLinks': []}]],\n",
+       " 'tableHeaders': [['Characteristic', 'Phenotype']],\n",
+       " 'processed_tableHeaders': ['characteristic', 'phenotype'],\n",
+       " 'merged_row': [25],\n",
+       " 'entityCell': [[1, 0],\n",
+       "  [1, 0],\n",
+       "  [0, 0],\n",
+       "  [0, 0],\n",
+       "  [1, 0],\n",
+       "  [0, 0],\n",
+       "  [0, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [0, 0],\n",
+       "  [0, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [0, 0],\n",
+       "  [0, 0],\n",
+       "  [1, 0],\n",
+       "  [1, 0],\n",
+       "  [0, 0]],\n",
+       " 'entityColumn': [0],\n",
+       " 'column_type': [0, 4],\n",
+       " 'unique': [1.0, 0],\n",
+       " 'entity_count': 17,\n",
+       " 'subject_column': 0}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wikitables[r_id]"
    ]
   },
   {
