Persistent chroma db testing; query testing

--- a/src/notebooks/chromadb/persistent.ipynb
+++ b/src/notebooks/chromadb/persistent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
     "from time import time\n",
     "import chromadb\n",
     "\n",
-    "from code.fasttext.embedding_utils import TableEncoder"
+    "from code.fasttext.embedding_utils import TableEncoder\n",
+    "from code.utils.settings import DefaultPath\n",
+    "from code.utils.utils import rebuild_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chroma_client = chromadb.PersistentClient()\n",
-    "\n",
     "tabenc = TableEncoder()"
    ]
   },
@@ -32,41 +32,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rebuild_table(table):\n",
-    "    return pd.DataFrame(\n",
-    "        data=[\n",
-    "            [entry_data['text'] \n",
-    "             for entry_data in entry]\n",
-    "            for entry in table['tableData']\n",
-    "        ],\n",
-    "        columns=table['tableHeaders'][0]\n",
-    "        )"
+    "sloth_tested_pairs = pd.read_csv(\n",
+    "    DefaultPath.data_path.wikitables + 'train_set_turl_malaguti.csv',\n",
+    "    nrows=10000\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "sloth_tested_pairs = pd.read_csv(\n",
-    "    '/home/giovanni/unimore/TESI/src/data/train_set_turl_malaguti.csv',\n",
-    "    nrows=1000\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1905"
+       "14209"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,19 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wikitables = {}\n",
-    "with jsonlines.open('/home/giovanni/unimore/TESI/src/data/small_train_tables.jsonl', 'r') as reader:\n",
-    "    for obj in reader:\n",
-    "        wikitables[obj['_id']] = obj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +73,8 @@
     }
    ],
    "source": [
+    "chroma_client = chromadb.PersistentClient(DefaultPath.db_path.chroma + 'v0')\n",
+    "\n",
     "try:\n",
     "    chroma_client.delete_collection(\"column-base\")\n",
     "    chroma_client.delete_collection(\"row-base\")\n",
@@ -122,52 +95,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f12fae7ed831402890caab0ea0325d59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1904 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "batch_size = 500\n",
+    "batch_column_ids, batch_row_ids = [], []\n",
+    "batch_column_embeddings, batch_row_embeddings = [], []\n",
+    "\n",
+    "wikitables = {}\n",
+    "with jsonlines.open(DefaultPath.data_path.wikitables + 'small_train_tables.jsonl', 'r') as reader:\n",
+    "    for obj in reader:\n",
+    "        wikitables[obj['_id']] = obj\n",
+    "\n",
+    "i = 0 \n",
+    "\n",
+    "for table_id in tqdm(wikitables.keys()):\n",
+    "    try:\n",
+    "        wikitable = wikitables[table_id]\n",
+    "    except KeyError:\n",
+    "        print(f'Table ID {table_id} not found')\n",
+    "        continue\n",
+    "    \n",
+    "    table_id = wikitable['_id']\n",
+    "    i += 1\n",
+    "\n",
+    "    table = rebuild_table(wikitable)\n",
+    "    row_embeddings, column_embeddings = tabenc.full_embedding(table, False, False)\n",
+    "\n",
+    "    # batch_column_ids.extend(list(range(column_embeddings.shape[0])))\n",
+    "    # batch_row_ids.extend(list(range(row_embeddings.shape[0]))) \n",
+    "\n",
+    "    # ID - version 1\n",
+    "    batch_column_ids.extend([f'{table_id}#{idx}' for idx in range(column_embeddings.shape[0])])\n",
+    "    batch_row_ids.extend([f'{table_id}#{idx}' for idx in range(row_embeddings.shape[0])]) \n",
+    "\n",
+    "    batch_column_embeddings.extend(column_embeddings.tolist())\n",
+    "    batch_row_embeddings.extend(row_embeddings.tolist())\n",
+    "\n",
+    "    if i % batch_size == 0 and i != 0:\n",
+    "        collection_column_base.add(\n",
+    "            ids=batch_column_ids,\n",
+    "            #metadatas=[{'table_id': table_id}] * column_embeddings.shape[0],\n",
+    "            embeddings=batch_column_embeddings\n",
+    "        )\n",
+    "\n",
+    "        collection_row_base.add(\n",
+    "            ids=batch_row_ids,\n",
+    "            #metadatas=[{'table_id': table_id}] * row_embeddings.shape[0],\n",
+    "            embeddings=batch_row_embeddings\n",
+    "        )\n",
+    "        \n",
+    "        batch_column_ids, batch_row_ids = [], []\n",
+    "        batch_column_embeddings, batch_row_embeddings = [], []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The same, but working with jsonl reader directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n",
-      "700\n",
-      "800\n",
-      "900\n",
-      "1000\n",
-      "1100\n",
-      "1200\n",
-      "1300\n",
-      "1400\n",
-      "1500\n",
-      "1600\n",
-      "1700\n",
-      "1800\n",
-      "1900\n"
+      "Loaded in db 14000...\r"
      ]
     }
    ],
    "source": [
-    "batch_size = 100\n",
+    "batch_size = 500\n",
     "batch_column_ids, batch_row_ids = [], []\n",
     "batch_column_embeddings, batch_row_embeddings = [], []\n",
     "\n",
     "i = 0 \n",
     "\n",
-    "#with jsonlines.open('/home/giovanni/unimore/TESI/src/data/small_train_tables.jsonl', 'r') as reader:\n",
-    "#    for wikitable in reader:\n",
-    "\n",
-    "if 1:        \n",
-    "    for table_id in tqdm(ids):\n",
-    "        try:\n",
-    "            wikitable = wikitables[table_id]\n",
-    "        except KeyError:\n",
-    "            print(f'Table ID {table_id} not found')\n",
-    "            continue\n",
+    "with jsonlines.open(DefaultPath.data_path.wikitables + 'medium_train_tables.jsonl', 'r') as reader:\n",
+    "    for wikitable in reader:\n",
     "        \n",
     "        table_id = wikitable['_id']\n",
     "        i += 1\n",
@@ -175,15 +201,13 @@
     "        table = rebuild_table(wikitable)\n",
     "        row_embeddings, column_embeddings = tabenc.full_embedding(table, False, False)\n",
     "\n",
-    "\n",
     "        batch_column_ids.extend([f\"{table_id}#{i}\" for i in range(column_embeddings.shape[0])])\n",
     "        batch_row_ids.extend([f\"{table_id}#{i}\" for i in range(row_embeddings.shape[0])])\n",
     "        \n",
     "        batch_column_embeddings.extend(column_embeddings.tolist())\n",
     "        batch_row_embeddings.extend(row_embeddings.tolist())\n",
     "\n",
-    "        if i % batch_size == 0 and i != 0:\n",
-    "            print(i)\n",
+    "        if (i % batch_size == 0 and i != 0):\n",
     "            collection_column_base.add(\n",
     "                ids=batch_column_ids,\n",
     "                embeddings=batch_column_embeddings\n",
@@ -195,7 +219,24 @@
     "            )\n",
     "            \n",
     "            batch_column_ids, batch_row_ids = [], []\n",
-    "            batch_column_embeddings, batch_row_embeddings = [], []"
+    "            batch_column_embeddings, batch_row_embeddings = [], []\n",
+    "            print(f\"Loaded in db {i}...\", end='\\r')\n",
+    "    \n",
+    "    if batch_column_ids:\n",
+    "        # if case the batch isn't empty but it hasn't been loaded previously\n",
+    "        collection_column_base.add(\n",
+    "            ids=batch_column_ids,\n",
+    "            embeddings=batch_column_embeddings\n",
+    "        )\n",
+    "\n",
+    "        collection_row_base.add(\n",
+    "            ids=batch_row_ids,\n",
+    "            embeddings=batch_row_embeddings\n",
+    "        )\n",
+    "        \n",
+    "        batch_column_ids, batch_row_ids = [], []\n",
+    "        batch_column_embeddings, batch_row_embeddings = [], []\n",
+    "        print(f\"Loaded in db {i}...\", end='\\r')"
    ]
   }
  ],
