--- a/src/notebooks/fasttext/extract_subset_of_wikitables.ipynb
+++ b/src/notebooks/fasttext/extract_subset_of_wikitables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,75 +93,76 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>27340139-4</td>\n",
-       "      <td>33030049-4</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>9995</th>\n",
+       "      <td>10866704-2</td>\n",
+       "      <td>22726048-14</td>\n",
+       "      <td>0.375000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>31200308-1</td>\n",
-       "      <td>31802539-1</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <th>9996</th>\n",
+       "      <td>31255608-1</td>\n",
+       "      <td>36306977-1</td>\n",
+       "      <td>0.720588</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>254258-1</td>\n",
+       "      <td>475054-1</td>\n",
+       "      <td>0.545455</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <td>0.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>15181195-1</td>\n",
-       "      <td>32928401-1</td>\n",
-       "      <td>0.900000</td>\n",
-       "      <td>48</td>\n",
-       "      <td>0.960000</td>\n",
+       "      <th>9998</th>\n",
+       "      <td>17765209-1</td>\n",
+       "      <td>30429671-2</td>\n",
+       "      <td>0.318182</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>34374076-1</td>\n",
-       "      <td>6755735-3</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0.208333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>5997386-1</td>\n",
-       "      <td>8649085-1</td>\n",
-       "      <td>0.600000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <th>9999</th>\n",
+       "      <td>19135659-1</td>\n",
+       "      <td>35279077-2</td>\n",
+       "      <td>0.281481</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.128205</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 5 columns</p>\n",
+       "<p>10000 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           r_id        s_id      jsim  o_a        a%\n",
-       "0      857959-5    956801-5  1.000000    6  1.000000\n",
-       "1    14763133-1  15182906-1  0.827586   38  0.826087\n",
-       "2    15182906-1  33954290-1  0.787879   32  0.615385\n",
-       "3    14772277-1  32928438-1  0.900000   36  0.692308\n",
-       "4    31534804-2  32612781-1  0.300000    8  0.111111\n",
-       "..          ...         ...       ...  ...       ...\n",
-       "995  27340139-4  33030049-4  1.000000   21  1.000000\n",
-       "996  31200308-1  31802539-1  0.666667    4  0.666667\n",
-       "997  15181195-1  32928401-1  0.900000   48  0.960000\n",
-       "998  34374076-1   6755735-3  0.500000   40  0.208333\n",
-       "999   5997386-1   8649085-1  0.600000    4  0.666667\n",
+       "            r_id         s_id      jsim  o_a        a%\n",
+       "0       857959-5     956801-5  1.000000    6  1.000000\n",
+       "1     14763133-1   15182906-1  0.827586   38  0.826087\n",
+       "2     15182906-1   33954290-1  0.787879   32  0.615385\n",
+       "3     14772277-1   32928438-1  0.900000   36  0.692308\n",
+       "4     31534804-2   32612781-1  0.300000    8  0.111111\n",
+       "...          ...          ...       ...  ...       ...\n",
+       "9995  10866704-2  22726048-14  0.375000    3  0.250000\n",
+       "9996  31255608-1   36306977-1  0.720588   72  0.857143\n",
+       "9997    254258-1     475054-1  0.545455    4  0.400000\n",
+       "9998  17765209-1   30429671-2  0.318182   10  0.100000\n",
+       "9999  19135659-1   35279077-2  0.281481   20  0.128205\n",
        "\n",
-       "[1000 rows x 5 columns]"
+       "[10000 rows x 5 columns]"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "sloth_tested_pairs = pd.read_csv(\n",
     "    '/home/giovanni/unimore/TESI/src/data/train_set_turl_malaguti.csv',\n",
-    "    nrows=1000\n",
+    "    nrows=10000\n",
     "    )\n",
     "sloth_tested_pairs"
    ]
@@ -175,17 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1905"
+       "14209"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,32 +206,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Still missing 1900 tables\n",
-      "Still missing 1800 tables\n",
-      "Still missing 1700 tables\n",
-      "Still missing 1600 tables\n",
+      "Still missing 14000 tables\n",
+      "Still missing 13500 tables\n",
+      "Still missing 13000 tables\n",
+      "Still missing 12500 tables\n",
+      "Still missing 12000 tables\n",
+      "Still missing 11500 tables\n",
+      "Still missing 11000 tables\n",
+      "Still missing 10500 tables\n",
+      "Still missing 10000 tables\n",
+      "Still missing 9500 tables\n",
+      "Still missing 9000 tables\n",
+      "Still missing 8500 tables\n",
+      "Still missing 8000 tables\n",
+      "Still missing 7500 tables\n",
+      "Still missing 7000 tables\n",
+      "Still missing 6500 tables\n",
+      "Still missing 6000 tables\n",
+      "Still missing 5500 tables\n",
+      "Still missing 5000 tables\n",
+      "Still missing 4500 tables\n",
+      "Still missing 4000 tables\n",
+      "Still missing 3500 tables\n",
+      "Still missing 3000 tables\n",
+      "Still missing 2500 tables\n",
+      "Still missing 2000 tables\n",
       "Still missing 1500 tables\n",
-      "Still missing 1400 tables\n",
-      "Still missing 1300 tables\n",
-      "Still missing 1200 tables\n",
-      "Still missing 1100 tables\n",
       "Still missing 1000 tables\n",
-      "Still missing 900 tables\n",
-      "Still missing 800 tables\n",
-      "Still missing 700 tables\n",
-      "Still missing 600 tables\n",
       "Still missing 500 tables\n",
-      "Still missing 400 tables\n",
-      "Still missing 300 tables\n",
-      "Still missing 200 tables\n",
-      "Still missing 100 tables\n",
       "Still missing 0 tables\n"
      ]
     }
@@ -240,23 +251,26 @@
     "        if obj['_id'] in ids:\n",
     "            ids.remove(obj['_id'])\n",
     "            tables.append(obj)\n",
-    "            if len(ids) % 100 == 0:\n",
-    "                print(f\"Still missing {len(ids)} tables\")"
+    "            if len(ids) % 500 == 0:\n",
+    "                print(f\"Still missing {len(ids)} tables\")\n",
+    "        if not ids:\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1904"
+       "14209"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -265,11 +279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with jsonlines.open('/home/giovanni/unimore/TESI/src/data/small_train_tables.jsonl', mode='w') as writer:\n",
+    "with jsonlines.open('/home/giovanni/unimore/TESI/src/data/medium_train_tables.jsonl', mode='w') as writer:\n",
     "    writer.write_all(tables)"
    ]
   }
@@ -281,7 +295,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
